--- a/Pizza/pom.xml
+++ b/Pizza/pom.xml
@@ -57,12 +57,27 @@
             <artifactId>spring-tx</artifactId>
             <version>4.2.6.RELEASE</version>
         </dependency>  
-              			<dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.2.6.RELEASE</version>
 		</dependency>
-		
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.6.0</version>
+		</dependency>        		
 		
 		<dependency>
 			<groupId>javax.servlet</groupId>
