--- a/Pizza/pom.xml
+++ b/Pizza/pom.xml
@@ -81,8 +81,8 @@
 		
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -116,8 +116,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.2.3</version>
+            <version>2.5.3</version>
         </dependency>		
+
+		<dependency>
+  			<groupId>com.fasterxml.jackson.datatype</groupId>
+  			<artifactId>jackson-datatype-hibernate4</artifactId>
+  			<version>2.5.3</version>
+		</dependency>
 		
 	</dependencies>
 </project>
