separate slices from other items

--- a/Pizza/pom.xml
+++ b/Pizza/pom.xml
@@ -108,8 +108,11 @@
 			<version>3.3.2.GA</version>
 			 -->
 		</dependency>
-		
-		
+		<dependency>
+    		<groupId>org.hibernate.javax.persistence</groupId>
+    		<artifactId>hibernate-jpa-2.1-api</artifactId>
+    		<version>1.0.0.Final</version>
+		</dependency>		
 
 		<dependency>
 			<groupId>mysql</groupId>
