--- a/Pizza/src/log4j.properties
+++ b/Pizza/src/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.file=org.apache.log4j.RollingFileAppender
 
 
 # Direct log messages to a log file
-log4j.appender.file.File=${catalina.home}/logs/server.log
+log4j.appender.file.File=pizza_server.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
